@@ -1,5 +1,5 @@
 #!/bin/sh
-#	$Id: GMT_atan.sh,v 1.8 2010-06-21 23:42:55 guru Exp $
+#	$Id: GMT_atan.sh,v 1.9 2010-10-27 22:10:19 guru Exp $
 #
 
 trap 'rm -f $$.*; exit 1' 1 2 3 15
@@ -16,7 +16,7 @@ gmtmath -T-5/5/0.01 T ATAN PI DIV 2 MUL = > $$.d
 psxy $$.d -R-5/5/-1/1 -JX1.5/1 -B2f1g1/1f0.5g0.25WSne -O -K -Wthick -X1.85 >> GMT_atan.ps
 psxy -R -J -O -K -Sv0.004/0.03/0.02 -Gblack << EOF >> GMT_atan.ps
 3	0.8	180	0.45
-3	0.8	-90	0.4
+3	0	90	0.4
 EOF
 psxy -R -J -O -K -m -Wthinnest << EOF >> GMT_atan.ps
 >
