@@ -1,5 +1,5 @@
 <HTML>
-<!--    $Id: gmt_home.html,v 1.35 2010-10-09 22:26:20 guru Exp $      -->
+<!--    $Id: gmt_home.html,v 1.36 2010-10-27 22:10:19 guru Exp $      -->
 <HEAD>
 <TITLE>GMT - The Generic Mapping Tools</TITLE>
 </HEAD>
@@ -23,7 +23,7 @@ and is supported by the
 It is released under the
 <A HREF="http://www.gnu.org/copyleft/gpl.html" target="_blank">GNU General Public License</A>.
 <HR>
-<CENTER>Current version is 4.5.4, Released October 15, 2010.<CENTER>
+<CENTER>Current version is 4.5.4, Released November 1, 2010.<CENTER>
 <CENTER><IMG SRC="gmt_usage.jpg" ALT="RETURN" BORDER=0></CENTER>
 <P><H5>GMT is used all over the world. Each yellow dot represent a 15x15 arc minute block with one
 or more registered user or institution.  So far, almost 2000 such blocks have been registered,
